@@ -11,6 +11,7 @@ Version 1.3
  - Fixed Issue 386 - Add Duwi and Z-Wave.Me Config files thanks to pim.vanderhaven (Alex)
  - Fixed Issue 401 - Add Toon/Quby devices (Alex)
  - Added new manufacturers and new devices (Alex)
+ - Add Wenzhou TSP01 Config file thanks to Jan (Alex)
 
 Version 1.2 
  - Released on 15/10/14
